fix: update spacing

--- a/style.css
+++ b/style.css
@@ -1042,7 +1042,6 @@ a:active {
 
 .menu-toggle {
 	display: none;
-	margin-left: auto;
 }
 
 /*--------------------------------------------------------------
@@ -1776,11 +1775,14 @@ object {
 		background-color: #fff;
 		height: 0;
 	}
-	.menu-header-menu-container[aria-hidden='true'] {
+	.menu-header-menu-container[aria-expanded='true'] {
 		height: auto;
 	}
 	.menu-toggle {
 		display: block;
+	}
+	.menu-1 {
+		margin-left: auto;
 	}
 	.menu-1 ul.menu {
 		padding: 0;
